# eudaq

./: .gitignore  STARTRUN_AHCAL_BIF_TABLE_TLU_ALPIDE.sh  STARTRUN_AHCAL_SiWECAL_TABLE.sh  STARTRUN_Klaus.sh
conf/: ahcal.conf
data/: klaus.raw  klaus2.raw
main/exe/src/: euCliReader.cxx
main/lib/core/src/: DataReceiver.cc  Event.cc  RunControl.cc
monitors/onlinemon/include/: CorrelationHistos.hh  SimpleStandardPlane.hh
monitors/onlinemon/src/: CorrelationCollection.cc  CorrelationHistos.cc  EUDAQMonitorCollection.cc  HitmapCollection.cc  OnlineMon.cxx  OnlineMonConfiguration.cc  ParaMonitorCollection.cc  SimpleStandardPlane.cc
user/: CMakeLists.txt
user/calice/: CMakeLists.txt
user/calice/AHCAL/: CMakeLists.txt
user/calice/SiWECAL/: CMakeLists.txt
user/calice/SiWECAL/module/include/: SiReader.hh  SiWECALProducer.hh
user/calice/SiWECAL/module/src/: SiReader.cc  SiWECALProducer.cc
user/calice/cmake/: FindCACTUS.cmake
user/calice/conf/: STARTRUN_ahcal_bif_debug.sh  debug_20180413.conf
user/calice/conf/TileScan2x2_20180403/: stage_y-15_x-15_first.conf  stage_y-15_x15.conf  stage_y15_x-15.conf  stage_y15_x15.conf
user/calice/conf/common_SiWECAL_AHCAL_conf/: TablePositionScan_30032022.scan  common.conf  common.ini  siwecaltable.conf
user/calice/module/: CMakeLists.txt
user/calice/module/src/: AHCalRawEvent2LCEventConverter.cc  AHCalRawEvent2StdEventConverter.cc  AhcalRunControl.cc  CaliceAhcalBifBxidDataCollector.cc  CaliceBifStageTelDataCollector.cc  CaliceBxidRawEvent2LCEventConverter.cc  CaliceCommonRawEvent2LCEventConverter.cc  (+7 more)
(+13 files in other folders)
